[gd_scene load_steps=2 format=3 uid="uid://fbg7a35l7a4s"]

[ext_resource type="Script" uid="uid://bbug81qocdm6f" path="res://Scene/LevelSelect/level_select.gd" id="1_pldrm"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_pldrm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 240.28)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "Level Select"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelContainer" type="HFlowContainer" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
alignment = 1

[node name="TitleButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 60
text = "Back to Title"

[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/TitleButton" to="." method="_on_title_button_button_down"]
